results/archive/b60/compile_expand_planes_nhwc_kernel.dp_20260309_124433.log
Exit code: 1
Compiler flags: -fsycl -O2 -std=c++17 -fsycl-unnamed-lambda -sycl-std=2020 -fhonor-nans -fhonor-infinities -fno-associative-math -fno-approx-func -no-ftz -fsycl-targets=spir64_gen,spir64
AOT Targets: pvc,bmg,dg2,arl-h,mtl-h,lnl-m,ptl-h,ptl-u
=== STDOUT ===
=== SYCL Compilation for Intel XPU (BMG Support) ===
Timestamp: 20260309_124433
Kernel: expand_planes_nhwc_kernel.dp
Source: /workspace/kernel_dataset/sycl/expand_planes_nhwc_kernel.dp.cpp
Compiler: icpx
Compile Flags: -fsycl -O2 -std=c++17 -fsycl-unnamed-lambda -sycl-std=2020 -fhonor-nans -fhonor-infinities -fno-associative-math -fno-approx-func -no-ftz -fsycl-targets=spir64_gen,spir64
Device Link Flags: -fsycl-max-parallel-link-jobs=4 --offload-compress -fsycl-targets=spir64_gen,spir64 -Xs '-device pvc,bmg,dg2,arl-h,mtl-h,lnl-m,ptl-h,ptl-u -options -cl-poison-unsupported-fp64-kernels -options -cl-intel-enable-auto-large-GRF-mode -options -cl-fp32-correctly-rounded-divide-sqrt -options -cl-intel-greater-than-4GB-buffer-required'
AOT Targets: pvc,bmg,dg2,arl-h,mtl-h,lnl-m,ptl-h,ptl-u

Step 1: Compiling source to object file...
/workspace/kernel_dataset/sycl/expand_planes_nhwc_kernel.dp.cpp:39:16: error: unknown type name 'cudaError_t'
   39 | void CudaError(cudaError_t status, const char* file, const int& line);
      |                ^
/workspace/kernel_dataset/sycl/expand_planes_nhwc_kernel.dp.cpp:46:21: error: use of undeclared identifier 'item'
   46 |   const int index = item.get_local_id(0) + item.get_local_range(0) * item.get_group(0);
      |                     ^
/workspace/kernel_dataset/sycl/expand_planes_nhwc_kernel.dp.cpp:46:44: error: use of undeclared identifier 'item'
   46 |   const int index = item.get_local_id(0) + item.get_local_range(0) * item.get_group(0);
      |                                            ^
/workspace/kernel_dataset/sycl/expand_planes_nhwc_kernel.dp.cpp:46:70: error: use of undeclared identifier 'item'
   46 |   const int index = item.get_local_id(0) + item.get_local_range(0) * item.get_group(0);
      |                                                                      ^
/workspace/kernel_dataset/sycl/expand_planes_nhwc_kernel.dp.cpp:65:24: error: unknown type name 'cudaStream_t'; did you mean 'ihipStream_t'?
   65 |                        cudaStream_t stream) {
      |                        ^~~~~~~~~~~~
      |                        ihipStream_t
/opt/intel/oneapi/compiler/2025.1/bin/compiler/../../include/sycl/detail/backend_traits_hip.hpp:26:16: note: 'ihipStream_t' declared here
   26 | typedef struct ihipStream_t *HIPstream;
      |                ^
/workspace/kernel_dataset/sycl/expand_planes_nhwc_kernel.dp.cpp:65:37: error: variable has incomplete type 'ihipStream_t'
   65 |                        cudaStream_t stream) {
      |                                     ^
/opt/intel/oneapi/compiler/2025.1/bin/compiler/../../include/sycl/detail/backend_traits_hip.hpp:26:16: note: forward declaration of 'ihipStream_t'
   26 | typedef struct ihipStream_t *HIPstream;
      |                ^
/workspace/kernel_dataset/sycl/expand_planes_nhwc_kernel.dp.cpp:69:29: error: expected expression
   69 |   expandPlanes_kernel_NHWC<<<blocks, kBlockSize, 0, stream>>>(output, masks,
      |                             ^
/workspace/kernel_dataset/sycl/expand_planes_nhwc_kernel.dp.cpp:69:61: error: expected expression
   69 |   expandPlanes_kernel_NHWC<<<blocks, kBlockSize, 0, stream>>>(output, masks,
      |                                                             ^
/workspace/kernel_dataset/sycl/expand_planes_nhwc_kernel.dp.cpp:71:20: error: use of undeclared identifier 'cudaGetLastError'
   71 |   ReportCUDAErrors(cudaGetLastError());
      |                    ^
9 errors generated.
[ERROR] Compilation step 1 failed with exit code 1

=== STDERR ===
+ echo '=== SYCL Compilation for Intel XPU (BMG Support) ==='
+ echo 'Timestamp: 20260309_124433'
+ echo 'Kernel: expand_planes_nhwc_kernel.dp'
+ echo 'Source: /workspace/kernel_dataset/sycl/expand_planes_nhwc_kernel.dp.cpp'
+ echo 'Compiler: icpx'
+ echo 'Compile Flags: -fsycl -O2 -std=c++17 -fsycl-unnamed-lambda -sycl-std=2020 -fhonor-nans -fhonor-infinities -fno-associative-math -fno-approx-func -no-ftz -fsycl-targets=spir64_gen,spir64'
+ echo 'Device Link Flags: -fsycl-max-parallel-link-jobs=4 --offload-compress -fsycl-targets=spir64_gen,spir64 -Xs '\''-device pvc,bmg,dg2,arl-h,mtl-h,lnl-m,ptl-h,ptl-u -options -cl-poison-unsupported-fp64-kernels -options -cl-intel-enable-auto-large-GRF-mode -options -cl-fp32-correctly-rounded-divide-sqrt -options -cl-intel-greater-than-4GB-buffer-required'\'''
+ echo 'AOT Targets: pvc,bmg,dg2,arl-h,mtl-h,lnl-m,ptl-h,ptl-u'
+ echo ''
+ '[' '!' -f /workspace/kernel_dataset/sycl/expand_planes_nhwc_kernel.dp.cpp ']'
+ mkdir -p /workspace/build_sycl
+ mkdir -p /workspace/results/b60
+ echo 'Step 1: Compiling source to object file...'
+ icpx -fsycl -O2 -std=c++17 -fsycl-unnamed-lambda -sycl-std=2020 -fhonor-nans -fhonor-infinities -fno-associative-math -fno-approx-func -no-ftz -fsycl-targets=spir64_gen,spir64 -c /workspace/kernel_dataset/sycl/expand_planes_nhwc_kernel.dp.cpp -o /workspace/build_sycl/expand_planes_nhwc_kernel.dp.o
+ tee /workspace/results/b60/compile_expand_planes_nhwc_kernel.dp_20260309_124433.log.step1
+ STEP1_EXIT=1
+ '[' 1 -ne 0 ']'
+ echo '[ERROR] Compilation step 1 failed with exit code 1'
+ exit 1
